join, leave community, use JPQL instead of DTO Projection, add imageUrl, members, createdBy fields